# PR-3

./: .env  .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  CONNECTION_POOLING.md  FINAL_PROJECT_VERIFICATION.md  LEGACY_MIGRATION_PLAN.md  PERFORMANCE_RESULTS.md  PHASE_10_MONITORING.md  PHASE_10_VERIFICATION.md  PHASE_8_TEST_RESULTS.md  PHASE_9_ADVANCED_OPTIMIZATION.md  Readme.md  SECURITY_AUDIT.md  TESTING_DOCUMENTATION.md  TESTING_REPORT.md  docker-compose.yml  run_all_tests.ps1  run_all_tests.sh
db/: init.sql
services/rust-iss/: Cargo.toml  Dockerfile
services/rust-iss/src/: main.rs
services/rust-iss/src/clients/: astronomy_client.rs  iss_client.rs  jwst_client.rs  mod.rs  nasa_client.rs  osdr_client.rs  spacex_client.rs
services/rust-iss/src/config/: mod.rs
services/rust-iss/src/domain/: error.rs  mod.rs  models.rs
services/rust-iss/src/domain/models/: tests.rs
services/rust-iss/src/handlers/: health.rs  iss_handler.rs  jwst_handler.rs  mod.rs  nasa_handler.rs  osdr_handler.rs  spacex_handler.rs
services/rust-iss/src/middleware/: metrics.rs  mod.rs  rate_limit.rs  request_id.rs
services/rust-iss/src/repo/: cache_repo.rs  iss_repo.rs  mod.rs  osdr_repo.rs
services/rust-iss/src/routes/: mod.rs
services/rust-iss/src/scheduler/: mod.rs
services/rust-iss/src/services/: iss_service.rs  iss_service_tests.rs  jwst_service.rs  mod.rs  nasa_service.rs  osdr_service.rs  spacex_service.rs
services/rust-iss/src/utils/: metrics.rs
services/rust-iss/tests/: integration_tests.rs
tests/: README.md  performance_tests.ps1  performance_tests.sh
(+68 files in other folders)
