[package]
name = "rust-iss"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
governor = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.16", features = ["derive"] }
dotenv = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
base64 = "0.21"

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"
mockito = "1.2"
tower = { version = "0.4", features = ["util"] }

